@@ -280,7 +280,12 @@ GalComm.noAuth = The site you are trying to connect to is not signed by an autho
                 Please refer to the following document for help:\u000A\
 				http://www.infy.com/knowledge_capital/thought-papers/usingHTTPwith_java.pdf
 GalComm.error = Error
+GalComm.g2.moduleDisabled = The G2 installation you are trying to connect to doesn't have \
+				an active remote protocol module.
 
+
+Gallery.galleryNotFound=Gallery Remote can find no protocol implementation at the URL {0}.\u000A\
+				Check with a web browser that {0} is a valid Gallery URL.
 
 #GalComm1 module
 GalComm1.logging = Logging in to {0}
